--- a/index.html
+++ b/index.html
@@ -3,59 +3,59 @@
 <head>
 <meta charset="utf-8">
 
-<link rel="stylesheet" type="text/css" href="./styles/style_main.css">
-<link rel="stylesheet" type="text/css" href="./styles/style_small.css">
-<link rel="stylesheet" type="text/css" href="./styles/style_medium.css">
-<link rel="stylesheet" type="text/css" href="./styles/style_large.css">
+<link rel="stylesheet" type="text/css" href="styles/style_main.css">
+<link rel="stylesheet" type="text/css" href="styles/style_small.css">
+<link rel="stylesheet" type="text/css" href="styles/style_medium.css">
+<link rel="stylesheet" type="text/css" href="styles/style_large.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Crimson+Text|Muli">
 
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="viewport" content="width=device-width, initial-scale: 1">
 <title>My First Project</title>
 </head>
+
 <body>
+
 <div class="my-header">
   <div class="logo-in-header">
+    <img src=".\img\little_owl.jpg" class="owl_logo">
     <!-- owl pic from https://www.flickr.com/photos/bycp/5602448065-->
   </div>
+
   <div class="name-in-header">
     <h1>Joseph Munzenrider</h1>
-    <h3>learning to FED</h3>
+    <h3 class="title-in-header">FED Learner</h3>
   </div>
 </div>
 
 <div class="main-image">
-  <img src="./img/yellowstoneriver.jpg" class="thebigpicture" alt="big picture here">
+  <figure>
+    <img src="img/yellowstoneriver.jpg" class="thebigpicture" alt="big picture here">
+    <figcaption>Yellowstone River</figcaption>
+  </figure>
 </div>
+
 <div class="project-list">
-  <ul>
-    <li>
-      <div class="project-item">
-        <figure>
-          <img src="./img/PrimeLogo_Red.jpg" class="placeholder" alt="Red P">
-          <figcaption>Project 1</figcaption>
-        </figure>
-      </div>
-    </li>
-    <li>
-      <div class="project-item">
-        <figure>
-          <img src="PrimeLogo_Red.jpg" class="placeholder" alt="Red P">
-          <figcaption>Project 2</figcaption>
-        </figure>
-      </div>
-    </li>
-    <li>
-      <div class="project-item">
-        <figure>
-          <img src="PrimeLogo_Red.jpg" class="placeholder" alt="Red P">
-          <figcaption>Project 3</figcaption>
-        </figure>
-      </div>
-    </li>
-  </ul>
+  <div class="project-item">
+    <figure>
+      <img src="img/PrimeLogo_Red.jpg" class="placeholder" alt="Red P">
+      <figcaption>Project 1</figcaption>
+    </figure>
+  </div>
+
+  <div class="project-item">
+    <figure>
+      <img src="img/PrimeLogo_Red.jpg" class="placeholder" alt="Red P">
+      <figcaption>Project 2</figcaption>
+    </figure>
+  </div>
+
+  <div class="project-item">
+    <figure>
+      <img src="img/PrimeLogo_Red.jpg" class="placeholder" alt="Red P">
+      <figcaption>Project 3</figcaption>
+    </figure>
+  </div>
 </div>
-
-
-
 
 </body>
 </html>
