--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
   </div>
 </div>
 
+<div class="required-p">
+  <p>
+    In 2015 I took a vacation to Yellowstone National Park and took this picture. It's one of the best pictures I've ever taken.
+  </p>
+</div>
+
 <div class="main-image">
   <figure>
     <img src="img/yellowstoneriver.jpg" class="thebigpicture" alt="big picture here">
